--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.lee</groupId>
     <artifactId>springboot-security</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>rbac</module>
+    </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -101,10 +105,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-        <!-- spring session的依赖 -->
+        <!-- spring session的依赖,其他版本可能会有问题 -->
         <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
+            <version>1.3.1.RELEASE</version>
         </dependency>
 
     </dependencies>
